--- a/projetohotsite/Views/Home/Index.cshtml
+++ b/projetohotsite/Views/Home/Index.cshtml
@@ -1,43 +1,75 @@
 ﻿@model Interesse
-@{
-    ViewData["Title"] = "Hotsite";
-}
 
-<div>
-    <h1>Iniciativa Saúde da Cidade</h1>
-    <p>
-        Texto sobre vida saudável: Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit.
-    </p>
-    <p>
-        Texto sobre vida iniciativa: Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit.
-    </p>
+<div class="container align-items-left">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Iniciativa Saúde da Cidade</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <p>
+                Texto sobre vida saudável: Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae
+                legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae
+                hendrerit.
+            </p>
+        </div>
+        <div class="col-md-4 align-items-right">
+            <img src="~/images/alimentos.png" class="img-fluid">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <p>
+                Texto sobre vida iniciativa: Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae
+                legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae
+                hendrerit.
+            </p>
+        </div>
+    </div>
+
 </div>
 
-<div>
-    <h2>Entre em contato!:</h2>
-    <p>Nos mande uma mensagem e fique por dentro de nossos eventos</p>
+<div class="container">
+    <div class="row">
+        <div class="card col-md-6">
+            <div class="card-title">
+                <h2>Entre em contato!:</h2>
+                <p>Nos mande uma mensagem e fique por dentro de nossos eventos</p>
+            </div>
 
-    <form action="/Home/Cadastrar" method="POST">
-        <div>
-            <label asp-for="Nome">Nome:</label>
-            <input asp-for="Nome" />
+            <form action="/Home/Cadastrar" method="POST">
+                <div class="card-body">
+                    <div class="form-group">
+                        <label asp-for="Nome">Nome:</label>
+                        <input asp-for="Nome" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Email">Email:</label>
+                        <input asp-for="Email" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Mensagem">Mensagem (opcional):</label>
+                        <textarea asp-for="Mensagem" class="form-control"></textarea>
+                    </div>
+                    <div>
+                        <input type="submit" value="Enviar" class="btn btn-secondary btn-block" />
+                    </div>
+                </div>
+            </form>
         </div>
-        <div>
-            <label asp-for="Email">Email:</label>
-            <input asp-for="Email" />
-        </div>
-        <div>
-            <label asp-for="Mensagem">Mensagem (opcional):</label>
-            <textarea asp-for="Mensagem"></textarea>
-        </div>
-        <div>
-            <input type="submit" value="Enviar" />
-        </div>
-    </form>
-</div>
 
-<div>
-    <a href="#">Agenda de eventos</a>
-    <a href="#">Dicas de vida saudável</a>
-    <a href="#">Apoiadores</a>
+        <div class="col-md-2">
+            <img src="~/images/agenda.png">
+            <a href="#">Agenda de eventos</a>
+        </div>
+        <div class="col-md-2">
+            <img src="~/images/dica.png">
+            <a href="#">Dicas de vida saudável</a>
+        </div>
+        <div class="col-md-2">
+            <img src="~/images/apoiadores.png">
+            <a href="#">Apoiadores</a>
+        </div>
+    </div>
 </div>
