--- a/projetohotsite/Views/Shared/_Layout.cshtml
+++ b/projetohotsite/Views/Shared/_Layout.cshtml
@@ -3,26 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="~/css/site.css">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
     <title>@ViewData["Title"] - Hotsite</title>
 </head>
 <body>
-    <header>
-        <nav>
-           <h1>Hotsite</h1>
-        </nav>
-    </header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - Hotsite
-        </div>
-    </footer>
-
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
