partial view modal

--- a/projetohotsite/Views/Home/Index.cshtml
+++ b/projetohotsite/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                 hendrerit.
             </p>
         </div>
-        <div class="col-md-4 align-items-right">
+        <div class="col-md-4">
             <img src="~/images/alimentos.png" class="img-fluid">
         </div>
     </div>
@@ -61,15 +61,17 @@
 
         <div class="col-md-2">
             <img src="~/images/agenda.png">
-            <a href="#">Agenda de eventos</a>
+            <a id="agenda" href="#">Agenda de eventos</a>
         </div>
         <div class="col-md-2">
             <img src="~/images/dica.png">
-            <a href="#">Dicas de vida saudável</a>
+            <a id="dica" href="#">Dicas de vida saudável</a>
         </div>
         <div class="col-md-2">
             <img src="~/images/apoiadores.png">
-            <a href="#">Apoiadores</a>
+            <a id="apoiadores" href="#">Apoiadores</a>
         </div>
     </div>
 </div>
+
+ <partial name="_Modal" />
