--- a/projetohotsite/Views/Home/Index.cshtml
+++ b/projetohotsite/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
                 <p>Nos mande uma mensagem e fique por dentro de nossos eventos</p>
             </div>
 
-            <form action="/Home/Cadastrar" method="POST">
+            <form id="form" action="/Home/Cadastrar" method="POST">
                 <div class="card-body">
                     <div class="form-group">
                         <label asp-for="Nome">Nome:</label>
