--- a/projetohotsite/Views/Home/Index.cshtml
+++ b/projetohotsite/Views/Home/Index.cshtml
@@ -38,19 +38,19 @@
                 <p>Nos mande uma mensagem e fique por dentro de nossos eventos</p>
             </div>
 
-            <form id="form" action="/Home/Cadastrar" method="POST">
+            <form id="form" method="POST">
                 <div class="card-body">
                     <div class="form-group">
                         <label asp-for="Nome">Nome:</label>
-                        <input asp-for="Nome" class="form-control" />
+                        <input asp-for="Nome" class="form-control" id="nome" />
                     </div>
                     <div class="form-group">
                         <label asp-for="Email">Email:</label>
-                        <input asp-for="Email" class="form-control" />
+                        <input asp-for="Email" class="form-control" id="email" />
                     </div>
                     <div class="form-group">
                         <label asp-for="Mensagem">Mensagem (opcional):</label>
-                        <textarea asp-for="Mensagem" class="form-control"></textarea>
+                        <textarea asp-for="Mensagem" class="form-control" id="mensagem"></textarea>
                     </div>
                     <div>
                         <input type="submit" value="Enviar" class="btn btn-secondary btn-block" />
